--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,13 @@
 			<artifactId>lombok</artifactId>
 		</dependency>
 
+		<!--okhttp3 jar-->
+		<dependency>
+			<groupId>com.squareup.okhttp3</groupId>
+			<artifactId>okhttp</artifactId>
+			<version>3.10.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
