--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,4 @@
-server:
-  port: 80
-  servlet:
-    context-path: /websocker
-  tomcat:
-    uri-encoding: utf-8
+
 # 数据库设置
 spring:
   datasource:
@@ -58,17 +53,8 @@ spring:
       mode: HTML5
       prefix: classpath:/templates/
       suffix: .html
-mybatis-plus:
+mybatis:
   mapper-locations: classpath:mapping/*Mapper.xml
-  typeAliasesPackage: com.runrunfast.websocket.pojo
-  global-config:
-    id-type: 2
-    field-strategy: 2
-    db-column-underline: true
-    refresh-mapper: true
-  configuration:
-    map-underscore-to-camel-case: true
-    cache-enabled: true
 logging:
   level:
     com.web.prepay: debug
