--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.runrunfast</groupId>
-	<artifactId>websocket</artifactId>
+	<artifactId>webIM</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>websocket</name>
-	<description>Springboot + websocket 做推送</description>
+	<name>webIM</name>
+	<description>Springboot + websocket 做在线聊天系统</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
