--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.runrunfast</groupId>
 	<artifactId>webIM</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>webIM</name>
 	<description>Springboot + websocket 做在线聊天系统</description>
@@ -33,6 +33,13 @@
 			<version>1.3.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+			<scope>provided</scope>
+		</dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-websocket</artifactId>
@@ -45,11 +52,13 @@
 			<version>1.1.41</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<scope>runtime</scope>
+			<version>8.0.12</version>
 		</dependency>
+		<!--end mysql jar-->
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
@@ -98,6 +107,19 @@
 			<version>3.10.0</version>
 		</dependency>
 
+		<!--start shiro jar -->
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-spring</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.shiro</groupId>
+			<artifactId>shiro-ehcache</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<!--end shiro jar -->
+
 	</dependencies>
 
 	<build>
@@ -105,6 +127,10 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<finalName>webIM</finalName>
+					<fork>true</fork>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
